--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "core-js": "^3.4.7",
     "mapbox-gl": "^1.10.1",
     "mapbox.js": "^3.3.1",
+    "normalize-scss": "^7.0.1",
     "regenerator-runtime": "^0.13.3",
     "swiper": "^5.3.8"
   }
